<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_perfil"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/item_perfil" />
    <item
        android:id="@+id/item_configuracion"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/item_configuracion" />
    <item
        android:id="@+id/item_salir"
        android:icon="@drawable/baseline_exit_to_app_24"
        android:title="@string/item_salirApp" />
    <item
        android:id="@+id/item_informacion"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/item_info" />
    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/item_salir" />

</menu>