<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/bt_correo"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bt_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="@+id/et_contrasena"
        app:layout_constraintStart_toStartOf="@+id/et_contrasena"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasena" />

    <EditText
        android:id="@+id/et_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/bt_contraseña"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColorHint="#888888"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#50C878"
        android:text="@string/bt_login"
        app:layout_constraintBottom_toBottomOf="@+id/bt_registrarse"
        app:layout_constraintEnd_toStartOf="@+id/bt_registrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_registrarse" />

    <Button
        android:id="@+id/bt_registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#32CD32"
        android:text="@string/bt_registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasena"
        app:layout_constraintVertical_bias="0.639" />

    <Button
        android:id="@+id/bt_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#27AE60"
        android:text="@string/bt_limpiar"
        app:layout_constraintBottom_toBottomOf="@+id/bt_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_registrarse"
        app:layout_constraintTop_toTopOf="@+id/bt_registrarse" />

    <CheckBox
        android:id="@+id/cb_mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_mostrarContrasena"
        app:layout_constraintEnd_toEndOf="@+id/et_contrasena"
        app:layout_constraintTop_toBottomOf="@+id/et_contrasena" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="286dp"
        android:layout_height="185dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>